# StewardOS

./: .gitignore  .pre-commit-config.yaml  AI_AGENT_ARCHITECTURE_PRIMER.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  conftest.py  pyproject.toml
agents/: schedules.yaml
agents/family-office-mail-ingress/: .env.example  README.md  family-office-mail-ingress.service.example  pyproject.toml  start.sh
agents/family-office-mail-ingress/src/: __init__.py  config.py  main.py
agents/family-office-mail-ingress/tests/: test_webhook.py  test_webhook_forwarding.py
agents/family-office-mail-worker/: .env.example  .gitignore  README.md  family-office-mail-worker.service.example  pyproject.toml  start.sh
agents/family-office-mail-worker/migrations/: 001_initial.sql  002_cross_system_graph.sql
agents/family-office-mail-worker/scripts/: backfill_plane_coordination.py  setup_watch.py
agents/family-office-mail-worker/src/: codex_caller.py  config.py  main.py  models.py  plane_poller.py  session_store.py
agents/family-office-mail-worker/tests/: conftest.py  test_codex_caller.py  test_config.py  test_delegation.py  test_gmail_handler.py  test_graph_and_requests.py  test_queue_and_ack.py  test_reply_prompt_contract.py
servers/estate-graph-mcp/: .env.example  pyproject.toml  schema.sql  server.py
servers/estate-graph-mcp/migrations/: 20260228_illiquid_breaking_v2.sql  20260228_illiquid_extensions.sql  README.md
servers/estate-planning-mcp/: .env.example  assets.py  compliance.py  cross_cutting.py  documents.py  entities.py  ownership.py  people.py  pyproject.toml  schema.sql  server.py
servers/estate-planning-mcp/migrations/: 20260301_estate_core_prune.sql  20260303_estate_ops_gap_closure.sql  20260306_estate_asset_owner_xor.sql  README.md
servers/estate-planning-mcp/tests/: conftest.py  test_asset_ops.py  test_assets.py  test_compliance.py  test_cross_cutting.py  test_documents.py  test_ownership.py  test_people.py  test_people_schema.py  test_postgres_integration.py
servers/family-edu-mcp/: .env.example  artifacts.py  assessments.py  briefs.py  goals.py  helpers.py  learners.py  metrics.py  migrate_sqlite_to_postgres.py  planning.py  pyproject.toml  schema.sql  seed_data.py  server.py
servers/family-edu-mcp/migrations/: 20260307_family_edu_init.sql  20260307_family_edu_seed_catalogs.sql
servers/family-edu-mcp/tests/: conftest.py  test_goals.py  test_learners.py  test_server_lifespan.py
servers/finance-graph-mcp/: .env.example  assets.py  cross_cutting.py  entities.py  ips_scope_ops.py  ips_target_services.py  ips_targets.py  liabilities.py  liability_models.py  liability_schedule_ops.py  liability_tool_ops.py  ownership.py  people.py  pyproject.toml  schema.sql  server.py  valuation_services.py  valuations.py
servers/finance-graph-mcp/migrations/: 20260228_illiquid_breaking_v2.sql  20260228_illiquid_extensions.sql  20260301_liability_graph.sql  20260304_ips_lookthrough.sql  20260304_ips_targets.sql  20260306_finance_correctness_invariants.sql  20260307_finance_hard_cutover.sql  20260307_finance_pointer_only.sql  README.md
servers/finance-graph-mcp/tests/: conftest.py  test_cross_cutting.py  test_liabilities.py  test_liability_models.py  test_people.py  test_postgres_integration.py  test_server_lifespan.py  test_tool_schema.py  test_valuation_services.py
servers/ghostfolio-mcp/: accounts.py  client.py  market.py  orders.py  portfolio.py  pyproject.toml  reference.py  server.py
servers/ghostfolio-mcp/tests/: conftest.py  test_portfolio_snapshot.py
servers/health-graph-mcp/: .env.example  README.md  assertion_tool_ops.py  assertion_variant_ops.py  assertions.py  coverage.py  fhir.py  genome_knowledge.py  genomics.py  helpers.py  labs.py  paperless_sync.py  pgx.py  pyproject.toml  schema.sql  server.py  status.py  subjects.py
servers/health-graph-mcp/migrations/: 20260305_health_graph_init.sql  20260305_hydration_idempotency.sql  20260306_subject_identifier_global_uniqueness.sql  README.md
servers/health-graph-mcp/scripts/: purge_seed_hydration_once.sh
servers/health-graph-mcp/tests/: conftest.py  test_23andme_parser.py  test_policy.py  test_postgres_integration.py  test_runtime_envelopes.py  test_server_init.py  test_status.py  test_subjects.py
servers/household-tax-mcp/: errors.py  federal_individual_taxcalc.py  models.py  planning.py  pyproject.toml  readiness.py  returns.py  server.py  store.py  tax_config.py
servers/household-tax-mcp/migrations/: 20260303_household_tax_v2.sql  20260306_household_tax_exact_cutover.sql  20260307_household_tax_exact_runtime.sql  20260312_household_tax_ty2025_bundle.sql
servers/household-tax-mcp/tests/: conftest.py  test_authority_goldens.py  test_exact_support.py  test_planning.py  test_returns.py
servers/investing-workspace/: .env.example  .mcp.json.example  pyproject.toml
servers/investing-workspace/market-intel-direct/: server.py
servers/investing-workspace/policy-events/: README.md  congress_bulk.py  govinfo_bulk.py  pyproject.toml  server.py
servers/investing-workspace/portfolio-analytics/: drift.py  fx.py  holdings.py  prices.py  pyproject.toml  risk.py  server.py  snapshot.py  tlh.py
servers/lib/: README.md  pyproject.toml
servers/lib/stewardos_lib/: __init__.py  constants.py  db.py  domain_ops.py  graph_documents.py  json_utils.py  migrations.py  portfolio_snapshot.py  response_ops.py
servers/lib/tests/: test_constants.py  test_db.py  test_domain_ops.py  test_json_utils.py  test_migrations.py  test_response_ops.py
servers/memos-mcp/: .env.example  pyproject.toml  server.py
servers/memos-mcp/tests/: test_envelopes.py
servers/plane-mcp/: pyproject.toml
servers/plane-mcp/src/: server.py
servers/plane-mcp/tests/: conftest.py  test_coordination.py  test_coordination_canonical.py  test_creation.py  test_cycles.py  test_discovery.py  test_estimates.py  test_execution.py  test_management.py  test_modules.py  test_pages.py  test_project_admin_canonical.py  test_projects.py  test_relations.py  test_server_canonical.py  test_views.py  test_work_item_canonical.py
(+248 files in other folders)
