[project]
name = "family-office-mail-ingress"
version = "0.1.0"
description = "Family office Gmail webhook ingress for home-server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "google-auth>=2.23.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.26.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
