[project]
name = "estate-graph-mcp"
version = "0.1.0"
description = "Estate planning knowledge graph MCP server — people, entities, assets, ownership"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
]
