[project]
name = "family-edu-mcp"
version = "0.1.0"
description = "MCP server for child education and activity planning"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "asyncpg>=0.30.0", "stewardos-lib"]

[tool.uv.sources]
stewardos-lib = { path = "../lib", editable = true }

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
