[project]
name = "finance-graph-mcp"
version = "0.1.0"
description = "Finance graph MCP server for illiquid assets, valuations, and long-term liabilities"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
]
