[project]
name = "investing-workspace"
version = "0.2.0"
description = "Investment management MCP servers workspace"
requires-python = ">=3.10"
dependencies = [
    # Core MCP
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    # Market Data & Financial Libraries
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.13.0",
    "xlrd>=2.0.1",
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
