[project]
name = "stewardos-lib"
version = "0.1.0"
description = "Shared domain library for StewardOS MCP servers"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stewardos_lib"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
